Fix overflow issue with info section

--- a/src/scss/components/_modules.scss
+++ b/src/scss/components/_modules.scss
@@ -213,6 +213,7 @@
 //
 //##
 .info {
+  overflow-x: hidden;
   h2 {
     color: $text-color;
     margin-top: 0;
@@ -250,16 +251,19 @@
   .events {
     position: relative;
     z-index: 0;
-    padding: 50px 0 50px percentage((1 / $grid-columns));
-    .events-bg {
-      background-color: #fff;
-      left: 0;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      width: 100vw;
-      z-index: -1;
+    padding: 50px 0;
+    @media (min-width: $screen-md-min) {
+      padding-left: percentage((1 / $grid-columns));
+      .events-bg {
+        background-color: #fff;
+        left: 0;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        width: 100vw;
+        z-index: -1;
+      }
     }
     a {
       color: $text-color;
@@ -269,16 +273,19 @@
   .contribution {
     position: relative;
     z-index: 0;
-    padding: 50px 0 50px percentage((1 / $grid-columns));
-    .contribution-bg {
-      background-color: #f9f9f9;
-      left: 0;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      width: 100vw;
-      z-index: -1;
+    padding: 50px 0;
+    @media (min-width: $screen-md-min) {
+      padding-left: percentage((1 / $grid-columns));
+      .contribution-bg {
+        background-color: #f9f9f9;
+        left: 0;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        width: 100vw;
+        z-index: -1;
+      }
     }
   }
 }
